--- a/index.html
+++ b/index.html
@@ -151,33 +151,13 @@
   <!-- MAIN CONTENT -->
   <main>
     <section id="projects" class="container reveal">
-      <h2 class="section">Projects</h2>
-      <div class="two-grid">
-        <div class="card">
-          <div class="proj-thumb"><img src="https://via.placeholder.com/800x400?text=GenAI+PoC" alt="GenAI"></div>
-          <div class="proj-title">Generative AI PoC — Automated Anomaly Classification</div>
-          <div class="meta">Embeddings + clustering + LLM prompting to automate anomaly-to-domain mapping. Generated synthesis docs per business unit and cut analyst effort by 2–3 weeks.</div>
-        </div>
-
-        <div class="card">
-          <div class="proj-thumb"><img src="https://via.placeholder.com/800x400?text=AML+Calibration" alt="AML"></div>
-          <div class="proj-title">SAS AML — Threshold Calibration</div>
-          <div class="meta">Statistical calibration for transaction monitoring thresholds across entities; reduced false positives and improved detection quality.</div>
-        </div>
-
-        <div class="card">
-          <div class="proj-thumb"><img src="https://via.placeholder.com/800x400?text=Sanction+Monitoring" alt="Sanction"></div>
-          <div class="proj-title">Sanction Embargo Monitoring Pipeline</div>
-          <div class="meta">Kedro-based pipeline with Oozie scheduling and Kibana dashboards for 6+ KPIs; automated retraining for false-positive reduction.</div>
-        </div>
-
-        <div class="card">
-          <div class="proj-thumb"><img src="https://via.placeholder.com/800x400?text=Credit+Risk" alt="Credit"></div>
-          <div class="proj-title">Credit Risk Scoring Model</div>
-          <div class="meta">Logistic regression & Random Forest models with SHAP interpretability (AUC ~0.92).</div>
-        </div>
-      </div>
-    </section>
+  <h2 class="section">Société Générale</h2>
+  <div class="card">
+    <p>
+      Worked on multiple data science and analytics projects within the AML and compliance domain, including threshold calibration for SAS AML, a Generative AI Proof of Concept for automated anomaly classification, and an end-to-end sanction-embargo monitoring pipeline with Kedro, CI/CD, and Kibana dashboards.
+    </p>
+  </div>
+</section>
 
     <section id="experience" class="container reveal">
       <h2 class="section">Experience</h2>
