--- a/index.html
+++ b/index.html
@@ -5,16 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Swagata Sur — Associate Data Scientist</title>
 
-  <style>
-    :root {
-      --bg-top: #071124;
-      --bg-bot: #0f1724;
-      --muted: #9aa5b5;
-      --text: #e6eef6;
-      --card: rgba(255,255,255,0.02);
-      --accent: linear-gradient(90deg,#4f46e5,#06b6d4);
-      --blue-pill: #2563eb;
-    }
+  <link rel="stylesheet" href="css/style.css">
+
 
     *{box-sizing:border-box;scroll-behavior:smooth}
     html,body{margin:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;background:linear-gradient(180deg,var(--bg-top),var(--bg-bot));color:var(--text);}
