--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Swagata Sur — Associate Data Scientist</title>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -13,11 +14,12 @@
     <div class="nav-container">
       <div class="nav-logo">Swagata Sur</div>
       <nav class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="projects.html">Projects</a>
-        <a href="academics.html">Academics</a>
-        <a href="contact.html">Contact</a>
+        <a href="index.html"><i class="fas fa-home"></i> Home</a>
+        <a href="projects.html"><i class="fas fa-diagram-project"></i> Projects</a>
+        <a href="academics.html"><i class="fas fa-graduation-cap"></i> Academics</a>
+        <a href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
       </nav>
+
     </div>
   </header>
 
