--- a/projects.html
+++ b/projects.html
@@ -125,7 +125,7 @@
   </header>
 
   <!-- Projects -->
-  <section class="reveal">
+  <section class="container">
     <h2 class="section">Featured Projects</h2>
     <div class="projects-container">
 
