--- a/index.html
+++ b/index.html
@@ -29,14 +29,22 @@
       <div class="hero-left">
         <h1 class="title">Hi, I’m <span style="color:#fff">Swagata</span></h1>
         <div class="accent"></div>
-        <p class="tag">Associate Data Scientist | Generative AI | Analytics | ML</p>
+        <p class="tag">Associate Data Scientist | Analytics | Generative AI | ML</p>
 
-        <div class="socials">
-          <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank" title="LinkedIn">🔗</a>
-          <a class="icon-btn" href="mailto:swagata.stats@gmail.com" title="Email">📧</a>
-          <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank" title="GitHub">🐙</a>
-          <a class="icon-btn" href="https://www.instagram.com/swa_ga_taa" target="_blank" title="Instagram">📸</a>
+        <<div class="socials">
+          <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank" title="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+        
+          <a class="icon-btn" href="mailto:swagata.stats@gmail.com" title="Email">
+            <i class="fas fa-envelope"></i>
+          </a>
+        
+          <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank" title="GitHub">
+            <i class="fab fa-github"></i>
+          </a>
         </div>
+
       </div>
 
       <div class="hero-right">
@@ -52,10 +60,10 @@
     <h2 class="section">About Me</h2>
     <div class="card">
       <p>
-        I’m an Associate Data Scientist with hands-on experience in developing analytics solutions within the AML and compliance space. I hold a postgraduate degree in Statistics from the University of Delhi and currently work at a leading French bank, where I focus on combining statistical modeling with AI to drive impactful, data-driven solutions. I’ve worked on projects spanning threshold calibration, Generative AI–based anomaly classification, and sanctions monitoring pipelines using Kedro, CI/CD, and Kibana.
+        I’m an Associate Data Scientist with hands-on experience in developing analytics solutions within the compliance space. I hold a postgraduate degree in Statistics from the University of Delhi and currently work at a leading French bank, where I focus on blending statistical modeling with AI to drive impactful, data-driven solutions. I’ve worked on projects spanning threshold calibration, Generative AI–based anomaly classification, RAG pipeline development and end to end sanctions monitoring pipelines.
       </p>
       <p>
-        Outside of work, I enjoy playing chess, traveling to new places, exploring diverse cuisines, and cooking — activities that fuel both my curiosity and creativity.
+        Outside of work, I enjoy playing chess, traveling to new places, and exploring cuisines from the different corners of the world. Whether perfecting Indian curries or rolling fresh pasta, cooking is how I unwind and explore cultures.
       </p>
     </div>
   </section>
@@ -65,16 +73,17 @@
     <h2 class="section">Key Skills</h2>
     <div class="card">
       <div class="skills-list">
+        <div class="skill-pill">Data Science</div>
+        <div class="skill-pill">Analytics</div>
+        <div class="skill-pill">Data Visualization</div>
         <div class="skill-pill">Machine Learning</div>
         <div class="skill-pill">Generative AI</div>
-        <div class="skill-pill">Python</div>
-        <div class="skill-pill">SQL</div>
-        <div class="skill-pill">SAS</div>
         <div class="skill-pill">LangChain</div>
+        <div class="skill-pill">RAG</div>
+        <div class="skill-pill">Python</div>
+        <div class="skill-pill">Pyspark</div>
         <div class="skill-pill">Kedro</div>
-        <div class="skill-pill">CI/CD</div>
-        <div class="skill-pill">Kibana</div>
-        <div class="skill-pill">Power BI</div>
+        <div class="skill-pill">SQL</div>
       </div>
     </div>
   </section>
@@ -85,7 +94,7 @@
     <div class="card">
       <div class="experience-sub">Société Générale</div>
       <p>
-        Worked on multiple data science and analytics projects within the AML and compliance domain, including threshold calibration for SAS AML, a Generative AI Proof of Concept for automated anomaly classification, and an end-to-end sanction-embargo monitoring pipeline with Kedro, CI/CD, and Kibana dashboards.
+        Worked on multiple data science and analytics projects including threshold calibration, a Generative AI Proof of Concept for automated anomaly classification, a RAG agentic pipeline using langgraph and an end-to-end sanction-embargo monitoring pipeline with Kedro, CI/CD, and Kibana dashboards.
       </p>
     </div>
   </section>
@@ -100,28 +109,38 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="reveal container">
-    <h2 class="section">Contact</h2>
-    <div class="card">
-      <div class="contact-row">
-        <div class="contact-col">
-          <h3>Connect With Me</h3>
-          <div class="contact-socials">
-            <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank">🔗</a>
-            <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank">🐙</a>
-            <a class="icon-btn" href="https://www.instagram.com/swa_ga_taa" target="_blank">📸</a>
-          </div>
-        </div>
+<section id="contact" class="reveal container">
+  <h2 class="section">Contact</h2>
+  <div class="card">
+    <div class="contact-row">
+      <div class="contact-col">
+        <h3>Connect With Me</h3>
+        <div class="contact-socials">
 
-        <div class="contact-col">
-          <h3>Contact</h3>
-          <p>Email: <a href="mailto:swagata.stats@gmail.com">swagata.stats@gmail.com</a></p>
+          <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank" title="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+
+          <a class="icon-btn" href="https://github.com/swagata-sur20" target="_blank" title="GitHub">
+            <i class="fab fa-github"></i>
+          </a>
+
+          <a class="icon-btn" href="https://www.instagram.com/swa_ga_taa" target="_blank" title="Instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+
         </div>
       </div>
-    </div>
-  </section>
 
-  <footer>© 2025 Swagata Sur. All rights reserved.</footer>
+      <div class="contact-col">
+        <h3>Contact</h3>
+        <p>Email: <a href="mailto:swagata.stats@gmail.com">swagata.stats@gmail.com</a></p>
+      </div>
+    </div>
+  </div>
+</section>
+
+<footer>© 2026 Swagata Sur</footer>
 
   <script defer>
 window.addEventListener('DOMContentLoaded', () => {
