--- a/index.html
+++ b/index.html
@@ -67,6 +67,59 @@
       </p>
     </div>
   </section>
+  
+  <!-- What I Do -->
+  <section id="what-i-do" class="reveal container">
+    <h2 class="section">I Reveal What Data Hides</h2>
+  
+    <div class="feature-grid">
+  
+      <div class="feature-card">
+        <div class="feature-icon">
+          <i class="fas fa-chart-line"></i>
+        </div>
+        <h3>Data Science & Analytics</h3>
+        <p>
+          Transform raw data into actionable insights using statistical modeling,
+          exploratory analysis, and business-driven metrics.
+        </p>
+      </div>
+  
+      <div class="feature-card">
+        <div class="feature-icon">
+          <i class="fas fa-brain"></i>
+        </div>
+        <h3>Machine Learning</h3>
+        <p>
+          Build, evaluate, and deploy predictive models for real-world business
+          problems.
+        </p>
+      </div>
+  
+      <div class="feature-card">
+        <div class="feature-icon">
+          <i class="fas fa-robot"></i>
+        </div>
+        <h3>Generative AI & RAG</h3>
+        <p>
+          Design intelligent pipelines using LLMs, LangChain, LangGraph and RAG
+          for automated reasoning, classification, and decision support.
+        </p>
+      </div>
+  
+      <div class="feature-card">
+        <div class="feature-icon">
+          <i class="fas fa-chart-pie"></i>
+        </div>
+        <h3>Visualization & Insights</h3>
+        <p>
+          Communicate insights through intuitive dashboards and storytelling
+          using Power BI and data-driven narratives.
+        </p>
+      </div>
+  
+    </div>
+  </section>
 
   <!-- Key Skills -->
   <section id="skills" class="reveal container">
