--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="accent"></div>
         <p class="tag">Associate Data Scientist | Analytics | Generative AI | ML</p>
 
-        <<div class="socials">
+        <div class="socials">
           <a class="icon-btn" href="https://www.linkedin.com/in/swagata-sur" target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
