--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <h3>Machine Learning</h3>
         <p>
           Build, evaluate, and deploy predictive models for real-world business
-          problems.
+          problems in risk, compliance, and monitoring systems.
         </p>
       </div>
   
@@ -114,12 +114,13 @@
         <h3>Visualization & Insights</h3>
         <p>
           Communicate insights through intuitive dashboards and storytelling
-          using Power BI and data-driven narratives.
+          using Power BI, Kibana, and data-driven narratives.
         </p>
       </div>
   
     </div>
   </section>
+
 
   <!-- Key Skills -->
   <section id="skills" class="reveal container">
